2008-10-22  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tk.h:               CONST -> const and white-spacing
	* generic/tk.decls
	* generic/tkInt.decls
	* generic/tkDecls.h:          (regenerated)
	* generic/tkIntDecls.h:       (regenerated)
	* generic/tkIntPlatDecls.h:   (regenerated)
	* generic/tkIntXlibDecls.h:   (regenerated)
	* generic/tkPlatDecls.h:      (regenerated)
	* generic/ttk/tk.decls
	* generic/ttk/ttkDecls.h      (regenerated)
	* generic/ttk/ttkGenStubs.tcl

2008-10-20  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkBusy.c, macosx/tkMacOSXEmbed.c, unix/tkUnixEmbed.c:
	* win/tkWinWindow.c: Factor out the platform-specific parts into the
	platform directories. [Bug 2180919]

2008-10-18  Donal K. Fellows  <dkf@users.sf.net>

	TIP #321 IMPLEMENTATION

	* generic/tkBusy.c, doc/busy.n, tests/busy.test: Implementation of the
	[tk busy] command. [Patch 1997907]

2008-10-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinFont.c: [Bug 1825353] To fix a problem with tiny fonts on
	Russian versions of Windows we will avoid removing the internal
	leading for fixed width fonts.

2008-10-15  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tk.h:          Add "const" to many internal const tables, so
	* generic/tkBind.c:      those will be put by the C-compiler in the
	* generic/tkButton.c:    TEXT segment instead of the DATA segment.
	* generic/tkCanvas.c:    This makes those tables as being shareable in
	* generic/tkClipboard.c: shared libraries.
	* generic/tkCmds.c:
	* generic/tkConsole.c:
	* generic/tkEntry.c:
	* generic/tkFocus.c:
	* generic/tkFrame.c:
	* generic/tkGet.c:
	* generic/tkGrab.c:
	* generic/tkGrid.c:
	* generic/tkImage.c:
	* generic/tkImgBmap.c:
	* generic/tkImgGIF.c:
	* generic/tkImgPhoto.c:
	* generic/tkListbox.c:
	* generic/tkMenu.c:
	* generic/tkMenu.h:
	* generic/tkMenubutton.c:
	* generic/tkMessage.c:
	* generic/tkOption.c:
	* generic/tkPack.c:
	* generic/tkPanedWindow.c:
	* generic/tkPlace.c:
	* generic/tkScale.c: